# scout

./: .gitignore  AGENTS.md  README.md  SYNC_ENGINE_GUIDE.md
core/: .npmignore  README.md  build.sh  index.ts  package-lock.json  package.json  publish.sh  tsconfig.json
core/api_keys/: actions.ts
core/constants/: annotator.ts  app.ts  db.ts  env.ts  index.ts
core/helpers/: README.md  artifacts.ts  auth.ts  bounding_boxes.ts  cache.ts  chat.ts  components.ts  connectivity.ts  db.ts  devices.ts  email.ts  eventUtils.ts  events.ts  gps.ts  health_metrics.ts  heartbeats.ts  herds.ts  index.ts  layers.ts  location.ts  operators.ts  parts.ts  pins.ts  plans.ts  providers.ts  session_summaries.ts  sessions.ts  storage.ts  tags.ts  time.ts  ui.ts  users.ts  versions_software.ts  versions_software_server.ts  web.ts  zones.ts
core/hooks/: README.md  index.ts  useInfiniteQuery.ts  useScoutDbListener.tsx  useScoutRealtimeConnectivity.tsx  useScoutRealtimeDevices.tsx  useScoutRealtimeEvents.tsx  useScoutRealtimeParts.tsx  useScoutRealtimePins.tsx  useScoutRealtimePlans.tsx  useScoutRealtimeSessions.tsx  useScoutRealtimeTags.tsx  useScoutRealtimeVersionsSoftware.tsx  useScoutRefresh.ts
core/providers/: ScoutRefreshProvider.tsx  index.ts
core/store/: api.ts  configureStore.ts  hooks.ts  index.ts  scout.ts
core/supabase/: client.ts  middleware.ts  server.ts
core/types/: bounding_boxes.ts  connectivity.ts  data.ts  data_source.ts  db.ts  events.ts  gps.ts  herd_module.ts  index.ts  realtime.ts  requests.ts  supabase.ts  ui.ts
database/: README.md  dump.sql
database/migrations/: 01-gateway-device-rls-policies.sql  02-artifact-gateway-device-rls-policies.sql  03-add-broken-column-versions-software.sql  04-health-metrics-table-rls.sql  05-health-metrics-summary-function.sql  06-versions-software-build-path.sql  07-has-view-role-any-herd.sql  08-embeddings-artifacts-events.sql  README.md
docs/: README.md  package-lock.json  package.json
docs/app/: global.css  layout.tsx
docs/app/(home)/: page.tsx
docs/app/docs/: layout.tsx
docs/components/: logo-server.tsx
docs/content/docs/scout-core/: Contributing.mdx  authentication.mdx  index.mdx  meta.json
docs/content/docs/scout-core/helpers/: health-metrics.mdx  meta.json
docs/content/docs/scout-db/: Contributing.mdx  Development.mdx  index.mdx  meta.json
docs/content/docs/scout-db/buckets/: artifacts.mdx  meta.json  storage access control.mdx
docs/content/docs/scout-db/schemas/: Actions.mdx  Artifacts.mdx  Certificates.mdx  Chat.mdx  Components.mdx  Connectivity.mdx  Devices.mdx  Events.mdx  Health_metrics.mdx  Heartbeats.mdx  Herds.mdx  Layers.mdx  Operators.mdx  Parts.mdx  Pins.mdx  Plans.mdx  Providers.mdx  Sessions.mdx  Tags.mdx  Users.mdx  Users_roles_per_herd.mdx  Versions_software.mdx  (+3 more)
docs/content/docs/scout-rs/: cli.mdx  index.mdx  installation.mdx  meta.json  sync engine.mdx
docs/lib/: layout.shared.tsx
docs/public/: manifest.json  robots.txt
scout_rs/: .gitignore  Cargo.toml  README.md  STORAGE_ACCESS_CONTROL_IMPLEMENTATION.md  SYNC_STORAGE_INTEGRATION.md  env.example
scout_rs/src/: client.rs  db_client.rs  lib.rs  models.rs  storage.rs  sync.rs  ui.rs
scout_rs/src/models/: health_metric.rs  mod.rs  serde_helpers.rs  v1.rs  v2.rs  v3.rs  v4.rs
scout_rs/src/tus/: http.rs  mod.rs
scout_rs/tests/: client_integration_test.rs  resumable_upload_test.rs
scout_rs/tests/data/: README.md
scout_rs/tests/output/storage/: README.md
scout_rs/tus_client/: README.md
scout_rs/tus_client/src/: lib.rs
(+4 files in other folders)
