[package]
name = "scout_rs"
version = "0.4.1"
edition = "2021"
description = "A Rust client for the Scout API that allows uploading events and images to the Scout database"
license = "GPL-3.0"
authors = ["Adventure Labs <info@adventurelabs.earth>"]
repository = "https://github.com/Adventurous-Bytes/scout"
keywords = ["conservation", "wildlife", "monitoring"]
categories = ["api-bindings", "web-programming::http-client"]
readme = "README.md"
exclude = ["src/bin/*"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.11", features = ["multipart", "json"] }
anyhow = "1.0"
tokio = { version = "1.0", features = ["full"] }
dotenv = "0.15"
clap = { version = "4.0", features = ["derive"] }
# Logging and diagnostics
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
tracing = "0.1.37"
# PostgREST client for database operations
postgrest = "1.0"

