[package]
name = "scout_rs"
version = "0.7.8"
edition = "2021"
description = "A Rust client for the Scout API that allows uploading events and images to the Scout database"
license = "GPL-3.0"
authors = ["Adventure Labs <info@adventurelabs.earth>"]
repository = "https://github.com/Adventurous-Bytes/scout"
keywords = ["conservation", "wildlife", "monitoring"]
categories = ["api-bindings", "web-programming::http-client"]
readme = "README.md"
exclude = ["src/bin/*"]

[dependencies]
tus_client = { path = "tus_client" }
native_db = "0.8.2"
native_model = "0.4.20"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.12", features = ["json", "stream", "blocking"] }
anyhow = "1.0"
tokio = { version = "1.0", features = ["full"] }
dotenv = "0.15"
clap = { version = "4.0", features = ["derive"] }
# Logging and diagnostics
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
tracing = "0.1.37"
# PostgREST client for database operations
postgrest = "1.0"
# Test utilities
once_cell = "1.0"
tempfile = "3.3"
url = "2.4"
base64 = "0.13"

[dev-dependencies]
tempfile = "3.3"
